--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,6 +8,6 @@
     <h1 class="display-4">Hello World from .NET 7</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <hr />
-    <iframe frameborder="0" src="https://itch.io/embed-upload/9945415?color=333333" allowfullscreen="" width="1152" height="668" allow="cross-origin-isolated"><a href="https://palepeak.itch.io/color-splash-prototype">Play Color Splash Prototype on itch.io</a></iframe>
+    <iframe frameborder="0" src="https://html.itch.zone/html/9945415/index.html" allowfullscreen="" width="1152" height="668"><a href="https://palepeak.itch.io/color-splash-prototype">Play Color Splash Prototype on itch.io</a></iframe>
     <div>Host operating system: @Model.OSVersion</div>
 </div>
