--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<iframe frameborder="0" src="https://html.itch.zone/html/9945415/index.html" allowfullscreen="" width="1152" height="668" allow="cross-origin-isolated"><a href="https://palepeak.itch.io/color-splash-prototype">Play Color Splash Prototype on itch.io</a></iframe>
+<iframe frameborder="0" src="./Games/color/color.html" allowfullscreen="" width="1152" height="668" allow="cross-origin-isolated"><a href="https://palepeak.itch.io/color-splash-prototype">Play Color Splash Prototype on itch.io</a></iframe>
