fuck it, embed the widget

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<iframe frameborder="0" src="./Games/color/color.html" allowfullscreen="" width="1152" height="668" allow="cross-origin-isolated"><a href="https://palepeak.itch.io/color-splash-prototype">Play Color Splash Prototype on itch.io</a></iframe>
+<iframe frameborder="0" src="https://itch.io/embed/2586473" width="552" height="167"><a href="https://palepeak.itch.io/color-splash-prototype">Color Splash Prototype by palepeak</a></iframe>
